--- a/src/app/features/landing/components/interoperability/interoperability.component.html
+++ b/src/app/features/landing/components/interoperability/interoperability.component.html
@@ -16,12 +16,12 @@
                 Olvídate de la carga manual. Conecta tu ORCID ID y deja que CTI Vitae importe automáticamente tus
                 publicaciones desde Scopus, Web of Science y Alicia. Mantén tu historial al día sin esfuerzo.
             </p>
-            <a href="#" class="feature-link">
+            <!--   <a href="#" class="feature-link">
                 Aprende más
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
                 </svg>
-            </a>
+            </a> -->
         </div>
         <div class="feature-image-wrapper">
             <img src="assets/images/landing/interoperability/interoperatibility1.png"
@@ -39,12 +39,12 @@
                 Accede a los beneficios exclusivos de ser un investigador calificado por el Estado Peruano. Gestiona tu
                 solicitud, visualiza tu nivel y descarga tu constancia digital con total transparencia.
             </p>
-            <a href="#" class="feature-link">
+            <!--  <a href="#" class="feature-link">
                 Revisar guía de calificación
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
                 </svg>
-            </a>
+            </a> -->
         </div>
         <div class="feature-image-wrapper">
             <img src="assets/images/landing/interoperability/interoperatibility2.png"
