--- a/src/app/features/landing/landing.component.html
+++ b/src/app/features/landing/landing.component.html
@@ -1,19 +1,19 @@
 <app-landing-header></app-landing-header>
 
 <main>
-    <app-hero></app-hero>
+    <app-hero [sectionData]="heroSection" [loading]="loading"></app-hero>
 
-    <app-logos-carousel></app-logos-carousel>
+    <app-logos-carousel [sectionData]="alliesSection" [loading]="loading"></app-logos-carousel>
 
-    <app-features></app-features>
+    <app-features [sectionData]="benefitsSection" [loading]="loading"></app-features>
 
     <app-interoperability></app-interoperability>
 
-    <app-audience></app-audience>
+    <app-audience [sectionData]="publicoSection" [loading]="loading"></app-audience>
 
-    <app-testimonials></app-testimonials>
+    <app-testimonials [sectionData]="testimonialsSection" [loading]="loading"></app-testimonials>
 
-    <app-metrics></app-metrics>
+    <app-metrics [sectionData]="metricsSection" [loading]="loading"></app-metrics>
 </main>
 
 <app-footer></app-footer>
