--- a/src/app/features/dashboard/profile/pages/education/education.component.html
+++ b/src/app/features/dashboard/profile/pages/education/education.component.html
@@ -241,23 +241,16 @@
         <div class="form-row two-col">
             <div class="form-group">
                 <label>Grado Obtenido <span class="required">*</span></label>
-                <input type="text" formControlName="degreeName" class="form-input" hidden>
-                <!-- degreeName backup? No, distinct field -->
-                <!-- wait, checking original -->
-                <select formControlName="academicLevel" class="form-input">
+                <select formControlName="academicLevelId" class="form-input">
                     <option value="">Seleccionar nivel...</option>
-                    <option value="Bachiller">Bachiller</option>
-                    <option value="Titulado">Titulado</option>
-                    <option value="Maestría">Maestría</option>
-                    <option value="Doctorado">Doctorado</option>
+                    <option *ngFor="let item of academicLevels" [value]="item.codigo">{{ item.nombre }}</option>
                 </select>
             </div>
             <div class="form-group">
                 <label>País <span class="required">*</span></label>
-                <select formControlName="country" class="form-input">
+                <select formControlName="countryId" class="form-input">
                     <option value="">Seleccionar país...</option>
-                    <option value="Perú">Perú</option>
-                    <option value="Extranjero">Extranjero</option>
+                    <option *ngFor="let item of countries" [value]="item.id">{{ item.nombre }}</option>
                 </select>
             </div>
         </div>
